--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,8 @@ dev_dependencies:
   build_runner: ^2.0.0
   source_gen: ^1.5.0
 
-builders:
-  mediator|handler_builder:
-    import: "package:mediator/src/handler_builder.dart"
-    builder_factories: ["handlerBuilder"]
-    build_extensions: {".dart": [".g.dart"]}
-    auto_apply: true
-    build_to: source
+build:
+source_gen:
 
 
 flutter:
