--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ migrate_working_dir/
 *.iml
 *.ipr
 *.iws
+*.g
+*.mediator
 .idea/
 
 # The .vscode folder contains launch configuration and tasks you configure in
