--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mediator
+name: flutter_mediator
 description: "Simple, unambitious mediator implementation in Flutter"
 version: 0.0.1
 maintainer: Faraj Shuaib (@farajshuaib)
