--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ migrate_working_dir/
 *.ipr
 *.iws
 *.g
-*.mediator
+*.dart_mediatr
 .idea/
 
 # The .vscode folder contains launch configuration and tasks you configure in
