--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
-name: mediator
-description: "Simple, unambitious mediator implementation in Flutter"
-version: 0.0.1
+name: dart_mediatr
+description: "Simple, unambitious dart_mediatr implementation in Flutter"
+version: 1.0.0
 maintainer: Faraj Shuaib (@farajshuaib)
-homepage: https://github.com/farajshuaib/flutter_mediator
+homepage: https://github.com/farajshuaib/flutter_dart_mediatr
+repository: https://github.com/farajshuaib/flutter_dart_mediatr
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -12,13 +13,15 @@ dependencies:
   flutter:
     sdk: flutter
   glob: ^2.1.2
+  source_gen: ^1.5.0
+  analyzer: ^5.0.0
+  build:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  analyzer: ^5.0.0
   build_runner: ^2.0.0
-  source_gen: ^1.5.0
+
 
 build:
 source_gen:
