--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   glob: ^2.1.2
   source_gen: ^1.5.0
   analyzer: ^5.0.0
-  build:
+  build: ^2.4.1
 
 dev_dependencies:
   flutter_test:
