--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,12 +11,16 @@ dependencies:
     sdk: flutter
   dart_mediatr:
     path: ../../flutter_mediator
+  freezed: ^2.3.2
+  freezed_annotation: ^2.2.0
+  json_serializable: ^6.6.1
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  build_runner: ^2.0.0
+  build_runner:
 
 
 flutter:
